--- a/workshop1/w0.html
+++ b/workshop1/w0.html
@@ -10,10 +10,10 @@
      https://developer.mozilla.org/en-US/Learn/HTML/Introduction_to_HTML/Getting_started
 -->
 
-Is the earth round enough
+Is the earth round enough for
 
-  <a href = "view-source:http://bardcollege.github.io/workshop1/w0.html">Code</a>
+  <a href = "view-source:http://bardcollege.github.io/workshop1/w0.html">code</a>
 
-    <code>Language</code>?
+    <code>language to coexist peacefully</code>?
 
       <a href = "w1.html">--></a>  
