--- a/workshop1/w0.html
+++ b/workshop1/w0.html
@@ -14,6 +14,6 @@ Is the earth round enough for
 
   <a href = "view-source:http://bardcollege.github.io/workshop1/w0.html">code</a>
 
-    <code>language to coexist peacefully</code>?
+    <code>language to coexist peacefully with people</code>?
 
       <a href = "w1.html">--></a>  
