--- a/workshop1/w1.html
+++ b/workshop1/w1.html
@@ -10,6 +10,11 @@
 <h3>Quotes on Code</h3>
 
 <blockquote>
+  "My IQ is one of the highest — and you all know it! Please don't feel so stupid or insecure; it's not your fault." - Donald J. Trump
+  &mdash; <a href = "http://www.marieclaire.co.uk/blogs/550112/donald-trump-quotes.html">Fred Brooks</a>
+</blockquote>
+
+<blockquote>
   "The programmer, like the poet, works only slightly removed from
   pure thought-stuff. He builds his castles in the air, from air,
   creating by exertion of the imagination."
