--- a/workshop1/w1.html
+++ b/workshop1/w1.html
@@ -10,7 +10,7 @@
 <h3>Quotes on Code</h3>
 
 <blockquote>
-  "My IQ is one of the highest — and you all know it! Please don't feel so stupid or insecure; it's not your fault." - 
+  "My IQ is one of the highest — and you all know it! Please don't feel so stupid or insecure; it's not your fault." 
   &mdash; <a href = "http://www.marieclaire.co.uk/blogs/550112/donald-trump-quotes.html">Donald J. Trump</a>
 </blockquote>
 
