--- a/workshop1/w2.html
+++ b/workshop1/w2.html
@@ -21,11 +21,14 @@
     <h3>DECODING CODE: What do we mean by code?</h3>
 
     <ul>
-      <li>Computer Programs (e.g., <a href = "https://developer.mozilla.org/en-US/Learn/Getting_started_with_the_web/JavaScript_basics">Javascript</a>)</li>
-      <li>Codes of Conduct (e.g., <a href = "https://epic.org/privacy/terrorism/hr3162.html">Laws</a>)</li>
-      <li>Ciphers (e.g. <a href = "http://www.simonsingh.net/The_Black_Chamber/caesar.html">Caesar Secret Codes</a>)</li>
-      <li>Language Encodings (e.g., <a href = "https://en.wikipedia.org/wiki/ASCII">ASCII</a> and <a href = "http://unicode.org/charts/">Unicode</a>)</li>
-      <li>Compressions Schemes (e.g., <a href = "http://www.ams.org/samplings/feature-column/fcarc-image-compression">JPEG image compression</a>)</li>
+      <li>The Imitaion Game (e.g., <a href = "https://developer.mozilla.org/en-US/Learn/Getting_started_with_the_web/JavaScript_basics">Javascript</a>)</li>
+      <li>Just Say No (e.g., <a href = "https://epic.org/privacy/terrorism/hr3162.html">Laws</a>)</li>
+      <li>Follow The Golden Rule (e.g. <a href = "http://www.simonsingh.net/The_Black_Chamber/caesar.html">Caesar Secret Codes</a>)</li>
+      <li>LAX Bros 2k16 (e.g., <a href = "https://en.wikipedia.org/wiki/ASCII">ASCII</a> and <a href = "http://unicode.org/charts/">Unicode</a>)</li>
+      <li>The Dangers of Alcohol and Other Drugs (e.g., <a href = "http://www.ams.org/samplings/feature-column/fcarc-image-compression">JPEG image compression</a>)</li>
+          <ul>
+               <li><a href="https://www.nidcd.nih.gov/health/american-sign-language">Marijuana</a></li>
+               <li><a href="https://en.wikipedia.org/wiki/Spoken_language">Alcohol</a> </li>
     </ul>
         
     <h3>DECODING LANGUAGE: <a href="https://www.uio.no/studier/emner/hf/ikos/EXFAC03-AAS/h05/larestoff/linguistics/Chapter%201.(H05).pdf">What do we mean by language?</a></h3>
