--- a/workshop1/w4.html
+++ b/workshop1/w4.html
@@ -17,7 +17,7 @@
 
   <body>
 
-    <h1>Is <a href = "view-source:http://bardcollege.github.io/workshop1/w4.html">Code</a> <code>Language</code>?</h1>
+    <h1>What is the relationship between <a href = "view-source:http://bardcollege.github.io/workshop1/w4.html">code</a> <code>and language</code>?</h1>
 
     <h3>The Web as our Shared Memory</h3>
 	
@@ -25,13 +25,8 @@
     <blockquote>
       <a href = "https://en.wikipedia.org/wiki/Ada_Lovelace"><img src = "https://upload.wikimedia.org/wikipedia/commons/a/a4/Ada_Lovelace_portrait.jpg" alt = "Ada Lovelace" class = "headshot"></a>
       
-      "The <a href = "https://www.fourmilab.ch/babbage/sketch.html">Analytical
-      Engine</a> has no pretensions whatever to <i>originate</i>
-      anything. It can do whatever we <i>know how to order it</i> to
-      perform. It can <i>follow</i> analysis; but it has no power of
-      <i>anticipating</i> any analytical relations or truths. Its province is
-      to assist us to making <i>available</i> what we are already acquainted
-      with." &mdash; <a href = "https://en.wikipedia.org/wiki/Ada_Lovelace">Ada Lovelace</a>
+      “<a href = "http://www.junauza.com/2010/12/top-50-programming-quotes-of-all-time.html">Computer science</a> education cannot make anybody an expert programmer any more than studying brushes and pigment can make somebody an expert painter.”
+- Eric S. Raymond &mdash; <a href = "https://en.wikipedia.org/wiki/Ada_Lovelace">Ada Lovelace</a>
     </blockquote> 
        
     <img height = "315" src = "http://www-sop.inria.fr/acacia/personnel/Fabien.Gandon/lecture/saint_louis_2007_02/seminar/resources/memex.gif" alt = "memex">
