--- a/workshop1/w4.html
+++ b/workshop1/w4.html
@@ -19,14 +19,14 @@
 
     <h1>What is the relationship between <a href = "view-source:http://bardcollege.github.io/workshop1/w4.html">code</a> <code>and language</code>?</h1>
 
-    <h3>The Web as our Shared Memory</h3>
+    <h3>Language is Code and Code is Language</h3>
 	
 
     <blockquote>
       <a href = "https://en.wikipedia.org/wiki/Ada_Lovelace"><img src = "https://upload.wikimedia.org/wikipedia/commons/a/a4/Ada_Lovelace_portrait.jpg" alt = "Ada Lovelace" class = "headshot"></a>
       
       “<a href = "http://www.junauza.com/2010/12/top-50-programming-quotes-of-all-time.html">Computer science</a> education cannot make anybody an expert programmer any more than studying brushes and pigment can make somebody an expert painter.”
-- Eric S. Raymond &mdash; <a href = "https://en.wikipedia.org/wiki/Ada_Lovelace">Ada Lovelace</a>
+- &mdash; <a href = "https://en.wikipedia.org/wiki/Eric_S._Raymond">Eric S. Raymond</a>
     </blockquote> 
        
     <img height = "315" src = "http://www-sop.inria.fr/acacia/personnel/Fabien.Gandon/lecture/saint_louis_2007_02/seminar/resources/memex.gif" alt = "memex">
